[package]
name = "hkpb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-server = "0.7.1"
color-eyre = "0.6.3"
google-oauth = "1.11.0"
jwt = "0.16.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "macros", "sqlite"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tower-sessions = "0.12.2"
tower-sessions-sqlx-store = { version = "0.13", features = ["sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
